<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hao.chuyendoingoaite.ShowActivity">

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:background="#e5e5e5">

        <TextView
            android:id="@+id/grid_item_text_view_currency_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/currency_code"
            android:layout_weight="0.75"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/grid_item_text_view_currency_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/currency_name"
            android:layout_weight="2"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/grid_item_text_view_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buy"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="right"
            android:layout_marginRight="@dimen/activity_horizontal_margin"/>

        <TextView
            android:id="@+id/grid_item_text_view_sell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="right"
            android:text="@string/sell"/>
    </LinearLayout>

    <GridView
        android:id="@+id/grid_view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:verticalSpacing="1dp">

    </GridView>
</LinearLayout>
